adds creation window collapse

--- a/styles.css
+++ b/styles.css
@@ -79,16 +79,25 @@ input:focus {
   position: relative;
 }
 
-.container-create {
+#container-create {
   position: relative;
   background: #D0E7ED;
   max-width: 60rem;
   width: 90%;
   margin: .5rem auto;
-  height: auto;
   box-shadow: 0 .5rem 1rem #333;
   z-index: 10;
   overflow: hidden;
+}
+
+.create-collapse {
+  max-height: 6rem;
+  transition: max-height 2s;
+}
+
+.create-expand {
+  max-height: 100rem;
+  transition: max-height 2s;
 }
 
 .select {
@@ -212,7 +221,7 @@ input:focus {
 
 #btn-add-hero {
   position: absolute;
-  top: 7%;
+  top: 2.5rem;
   left: 63%;
   width: 2rem;
   height: 2rem;
