--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ input:focus {
 
 
 /*****************************
-** class styles
+** layout elements
 *****************************/
 
 .header {
@@ -144,6 +144,10 @@ input:focus {
   opacity: .7;
 }
 
+[id*='select-cap-'] {
+  margin: .5em;
+}
+
 .hero-vals {
   position: relative;
   width: 100%;
@@ -159,6 +163,18 @@ input:focus {
   margin: 1rem auto;
   padding: .5em 0;
   text-transform: uppercase;
+}
+
+#val-element {
+  background: #8B95C7;
+}
+
+#val-weapon {
+  background: #99A5DB;
+}
+
+#val-familiar {
+  background: #7982AD;
 }
 
 .actions button {
@@ -184,6 +200,8 @@ input:focus {
   width: 10%;
   margin: .5rem 0;
   position: relative;
+  background: #9AC2C7;
+  border-radius: 100%;
 }
 
 .army-item img {
@@ -192,6 +210,11 @@ input:focus {
   width: auto;
   max-width: 100%;
   border-radius: 100%;
+}
+
+.army-item img:hover {
+  box-shadow: 0 .1rem .6rem #ddd;
+  opacity: .5;
 }
 
 .army-item-tooltip {
@@ -203,11 +226,10 @@ input:focus {
   min-width: 8rem;
   height: auto;
   padding: .2rem .1rem;
-  background: #ddd;
+  background: #fff;
   opacity: .9;
   box-shadow: 0 .2rem .5rem #333;
   overflow-wrap: break-word;
-  hyphens: auto;
 }
 
 .army-item-ul {
@@ -218,7 +240,7 @@ input:focus {
 
 
 /*****************************
-** id styles
+** buttons
 *****************************/
 
 #btn-reset-army {
@@ -254,7 +276,6 @@ input:focus {
   color: #fff;
   font-size: 1.5em;
   line-height: 70%;
-  transform: translateY(-.2rem);
 }
 
 #btn-add-hero:hover {
@@ -264,22 +285,6 @@ input:focus {
 
 #btn-add-hero:active {
   transform: translateY(1px);
-}
-
-[id*='select-cap-'] {
-  margin: .5em;
-}
-
-#val-element {
-  background: #8B95C7;
-}
-
-#val-weapon {
-  background: #99A5DB;
-}
-
-#val-familiar {
-  background: #7982AD;
 }
 
 #btn-reset-hero {
