--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
   color: #9E1F14;
-  margin: .5em;
+  margin: 0;
   letter-spacing: .1rem;
 }
 
@@ -31,7 +31,7 @@ h1 {
 
 h2 {
   font-size: 2em;
-  padding: .5em;
+  padding: .3em;
 }
 
 h3 {
@@ -94,7 +94,7 @@ input:focus {
 }
 
 .create-collapse {
-  max-height: 6rem;
+  max-height: 4rem;
   transition: max-height 2s;
 }
 
@@ -113,6 +113,7 @@ input:focus {
 
 .select-header {
   background: #9AC2C7;
+  margin: 1rem;
 }
 
 .select-col {
@@ -155,14 +156,15 @@ input:focus {
   display: block;
   margin: 3rem auto;
   color: #fff;
+  text-transform: uppercase;
+
 }
 
-.vals-col {
+.hero-vals-col {
   float: left;
   width: 33.333%;
   margin: 1rem auto;
   padding: .5em 0;
-  text-transform: uppercase;
 }
 
 #val-element {
@@ -182,10 +184,40 @@ input:focus {
 }
 
 .container-army {
-  margin: 2rem auto;
+  margin: 1rem auto;
   max-width: 45rem;
   z-index: -10;
   background: #9AC2C7;
+}
+
+.army-vals {
+  text-transform: uppercase;
+  font-size: .7em;
+  color: #fff;
+}
+
+.army-vals-grp {
+  float: left;
+  width: 33.333%;
+  margin: 0 auto;
+}
+
+.army-vals-element {
+  background: #8B95C7;
+}
+
+.army-vals-weapon {
+  background: #99A5DB;
+}
+
+.army-vals-familiar {
+  background: #7982AD;
+}
+
+.army-vals-col {
+  float: left;
+  width: 25%;
+  padding: .5em 0;
 }
 
 #army-list {
@@ -200,7 +232,7 @@ input:focus {
   width: 10%;
   margin: .5rem 0;
   position: relative;
-  background: #9AC2C7;
+  background: #fff;
   border-radius: 100%;
 }
 
@@ -214,7 +246,7 @@ input:focus {
 
 .army-item img:hover {
   box-shadow: 0 .1rem .6rem #ddd;
-  opacity: .5;
+  opacity: .6;
 }
 
 .army-item-tooltip {
@@ -267,7 +299,7 @@ input:focus {
 
 #btn-add-hero {
   position: absolute;
-  top: 2.5rem;
+  top: 1.2rem;
   left: 63%;
   width: 2rem;
   height: 2rem;
